# Generative-Art

Physarum/: Cargo.toml
Physarum/src/: main.rs  ui.rs
Physarum/src/physarum/: blur.rs  grid.rs  mod.rs  physarum_model.rs
